--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"> -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
    <!-- Compiled and minified CSS -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -16,8 +16,27 @@
 
 <body>
 
-   <section class="startScreen ">
+   <section class="startScreen">
       <h1 class="tac">АДАПТИВНІСТЬ<span class="logoSpan">200</span></h1>
+   </section>
+
+   <section class="info_form hidd">
+      <div class="row">
+         <form class="col s12">
+            <div class="row">
+               <div class="input-field col s10">
+                  <input id="first_name" type="text" class="validate">
+                  <label for="first_name">Ім'я</label>
+               </div>
+            </div>
+            <div class="row">
+               <div class="input-field col s10">
+                  <input id="last_name" type="text" class="validate">
+                  <label for="last_name">Фамілія</label>
+               </div>
+            </div>
+         </form>
+      </div>
    </section>
 
    <section class="descriptionScreen  hidd">
@@ -40,19 +59,17 @@
    </section>
 
    <section class="interview hidd">
-
-      <div class="card_item df jcc">
+      <div id="0" class="card_item df jcc animate__animated animate__backInRight">
          <div class="card tac">
             <div class="card-content">
                <span class="card-title">Буває, що я серджуся</span>
             </div>
             <div class="card-action df jcsb">
-               <a class="waves-effect waves-light btn"><i class="material-icons right">check</i>Так</a>
-               <a class="waves-effect waves-light btn btn_red"><i class="material-icons right">close</i>Ні</a>
+               <a id="yes" class="waves-effect waves-light btn"><i class="material-icons right">check</i>Так</a>
+               <a id="no" class="waves-effect waves-light btn btn_red"><i class="material-icons right">close</i>Ні</a>
             </div>
          </div>
       </div>
-
    </section>
 
    <!-- Compiled and minified JavaScript -->
