--- a/app/index.html
+++ b/app/index.html
@@ -65,13 +65,13 @@
                <h6>Стать</h6>
                <p>
                   <label>
-                     <input class="with-gap" name="genderGroup" value="man" type="radio" />
+                     <input class="with-gap" name="genderGroup" value="Чоловік" type="radio" />
                      <span>Чоловік</span>
                   </label>
                </p>
                <p>
                   <label>
-                     <input class="with-gap" name="genderGroup" value="wooman" type="radio" />
+                     <input class="with-gap" name="genderGroup" value="Жінка" type="radio" />
                      <span>Жінка</span>
                   </label>
                </p>
@@ -88,10 +88,10 @@
    </section>
 
    <section class="interview hidd">
-      <div id="0" class="card_item df jcc animate__animated animate__backInRight">
+      <div class="card_item df jcc animate__animated animate__backInRight">
          <div class="card tac">
             <div class="card-content">
-               <span class="card-title">Буває, що я серджуся</span>
+               <span class="card-title"><span class="numberQustion">1. </span>Буває, що я серджуся</span>
             </div>
             <div class="card-action df jcsb">
                <a id="yes" class="waves-effect waves-light btn"><i class="material-icons right">check</i>Так</a>
@@ -103,6 +103,7 @@
 
    <!-- Compiled and minified JavaScript -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+   <script src="js/questions.js"></script>
    <script src="js/main.js"></script>
 </body>
 
